@@ -1,4 +1,5 @@
 [CW30]
++ AddSubMenu dialog: add subMenuID and position parameters.
 + AddCommand dialog: add commandID parameter.
 + Show dialog: add graphic's image type parameter.
 * AddCommand dialog: the user can omit sending parentID parameter.
